--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -97,3 +97,16 @@ iframe[title="Spotify Playlist"] {
   border-radius: 12px; /* Match your UI's border radius */
   box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); /* Match your UI's shadow */
 }
+
+.react-draggable-dragging {
+  transition: none !important;
+  cursor: grabbing !important;
+}
+
+.window-handle {
+  cursor: grab !important;
+}
+
+.window-handle:active {
+  cursor: grabbing !important;
+}
