--- a/src/styles/launchpad.css
+++ b/src/styles/launchpad.css
@@ -2,7 +2,7 @@
 .launchpad-container {
   position: fixed;
   inset: 0;
-  z-index: 50;
+  z-index: 9999; /* Increased z-index to be higher than any window */
   display: flex;
   flex-direction: column;
   align-items: center;
